Migrate Projects to Identity (#38)
Makes more sense for them to live there, also means we can centralize
the scoping code and simplify the interface for all services in future.
