# pkg/server/handler/scoping/scoper.go
@@ -19,12 +19,10 @@ package scoping
 import (
 	"context"
 	"errors"
-	"slices"
 
 	"github.com/unikorn-cloud/core/pkg/authorization/rbac"
 	"github.com/unikorn-cloud/core/pkg/authorization/userinfo"
 	"github.com/unikorn-cloud/core/pkg/constants"
-	unikornv1 "github.com/unikorn-cloud/unikorn/pkg/apis/unikorn/v1alpha1"
 
 	"k8s.io/apimachinery/pkg/labels"
 	"k8s.io/apimachinery/pkg/selection"
@@ -53,77 +51,16 @@ func New(ctx context.Context, client client.Client, organization string) *Scoper
 	}
 }
 
-func (s *Scoper) MustApplyScope() bool {
-	// Super admin sees all.
-	if s.permissions.IsSuperAdmin {
-		return false
-	}
-
-	// NOTE: RBAC should have determined this exists by now.
-	organization, _ := s.permissions.LookupOrganization(s.organization)
-
-	// Organization admin sees all.
-	for _, group := range organization.Groups {
-		if slices.Contains(group.Roles, "admin") {
-			return false
-		}
-	}
-
-	return true
-}
-
-func (s *Scoper) isGroupMember(groupIDs []string) bool {
-	// NOTE: RBAC should have determined this exists by now.
-	organization, _ := s.permissions.LookupOrganization(s.organization)
-
-	for _, group := range organization.Groups {
-		if slices.Contains(groupIDs, group.ID) {
-			return true
-		}
-	}
-
-	return false
-}
-
-func (s *Scoper) ListProjects(ctx context.Context) (*unikornv1.ProjectList, error) {
-	selector := labels.NewSelector()
-
-	orgRequirement, err := labels.NewRequirement(constants.OrganizationLabel, selection.Equals, []string{s.organization})
+func (s *Scoper) listProjectNames() ([]string, error) {
+	organization, err := s.permissions.LookupOrganization(s.organization)
 	if err != nil {
 		return nil, err
 	}
 
-	selector = selector.Add(*orgRequirement)
+	result := make([]string, len(organization.Projects))
 
-	options := &client.ListOptions{
-		LabelSelector: selector,
-	}
-
-	result := &unikornv1.ProjectList{}
-
-	if err := s.client.List(ctx, result, options); err != nil {
-		return nil, err
-	}
-
-	if s.MustApplyScope() {
-		result.Items = slices.DeleteFunc(result.Items, func(project unikornv1.Project) bool {
-			return !s.isGroupMember(project.Spec.GroupIDs)
-		})
-	}
-
-	return result, nil
-}
-
-func (s *Scoper) listProjectNames(ctx context.Context) ([]string, error) {
-	projects, err := s.ListProjects(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	result := make([]string, len(projects.Items))
-
-	for i := range projects.Items {
-		result[i] = projects.Items[i].Name
+	for i, project := range organization.Projects {
+		result[i] = project.Name
 	}
 
 	return result, nil
@@ -143,8 +80,8 @@ func (s *Scoper) GetSelector(ctx context.Context) (labels.Selector, error) {
 	selector = selector.Add(*orgReq)
 
 	// Scope to projects that you are a member of, if necessary.
-	if s.MustApplyScope() {
-		projects, err := s.listProjectNames(ctx)
+	if !s.permissions.IsSuperAdmin {
+		projects, err := s.listProjectNames()
 		if err != nil {
 			return nil, err
 		}
@@ -156,10 +93,6 @@ func (s *Scoper) GetSelector(ctx context.Context) (labels.Selector, error) {
 		}
 
 		log.Info("scoping request to projects", "projects", projects)
-
-		if err != nil {
-			return nil, err
-		}
 
 		projectReq, err := labels.NewRequirement(constants.ProjectLabel, selection.In, projects)
 		if err != nil {
